tests/ui/auto-traits/typeck-auto-trait-no-supertraits-2.stderr
error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/typeck-auto-trait-no-supertraits-2.rs:5:12
   |
LL | trait Magic : Sized where Option<Self> : Magic {}
   |       -----^^^^^^^^ help: remove the super traits or lifetime bounds
   |       |
   |       auto traits cannot have super traits or lifetime bounds

error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/typeck-auto-trait-no-supertraits-2.rs:5:21
   |
LL | trait Magic : Sized where Option<Self> : Magic {}
   |       -----         ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove the super traits or lifetime bounds
   |       |
   |       auto traits cannot have super traits or lifetime bounds

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0568`.
